# fftuniba-cruciverbit

./: README.md  pyproject.toml
scripts/: generate_task1_dual_mode.py  generate_task2_dual_mode.py  it5eff_official.py  task1_formatter.py
scripts/labeled_dataset/: gemini_client.py  models.py  test_classified_temp0.csv
scripts/task_2/: task2_algorithm.py
